# django_sample

./: .gitignore  Dockerfile  LICENCE.md  docker-compose.yml  pyproject.toml
django_app/django_app/: settings.py
django_app/hello/: forms.py  models.py  urls.py  views.py
django_app/hello/templates/hello/: delete.html  edit.html  index.html
