[tool.poetry]
name = "django-app"
version = "0.1.0"
description = "django sample"
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.4"
django-widget-tweaks = "^1.4.8"
mysqlclient = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
